[package]
name = "sxd_html_table"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kitsuyui <kitsuyui@kitsuyui.com>"]
description = "A HTML table parser based on sxd_html."
categories = ["web-programming", "parser-implementations"]
keywords = ["sxd_document", "sxd_xpath", "html5ever", "sxd_html", "table"]
repository = "https://github.com/kitsuyui/sxd_html_table"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sxd-xpath = "0.4.2"
sxd_html = "0.1.0"
